2016-12-03  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (next_token): Now takes a 'secret' argument to
	determine if it will overwrite the token within the buffer with '*' to
	prevent leaking of the secret token.
	(gpg_ctx_parse_status): Pass TRUE to next_token() when reading the
	SESSION_KEY token.

2016-12-02  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_free): Free the session_key.
	(gpg_ctx_get_argv): Pass --show-session-key to gpg if requested.
	(gpg_ctx_parse_status): Decode the session-key sent by gpg.
	(gpg_decrypt): Set the session_key on the decrypt result.
	(g_mime_gpg_context_get_retrieve_session_key): Added.
	(g_mime_gpg_context_set_retrieve_session_key): Added.

	* gmime/gmime-crypto-context.c (g_mime_decrypt_result_set_session_key): Added.
	(g_mime_decryption_result_get_session_key): Added.

	Thanks to Daniel Kahn Gillmor for this patch.

2016-12-02  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (g_mime_gpg_context_new): Allow NULL for the gpg path
	in order to use the default gpg path (i.e. "gpg").

	* tests/test-pgp*.c: Updated unit tests to pass NULL for the gpg path so that
	running the unit tests don't depend on a specific location of gpg.

	Thanks to Daniel Kahn Gillmor for this patch.

2016-08-30  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-multipart.c (read_random_pool): Only initialized srand() once.

2016-07-19  Jeffrey Stedfast  <jeff@xamarin.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_get_argv): Always use --batch mode and
	don't pass --yes.

2016-07-14  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_construct_part): When parsing individual
	mime parts, do not treat them as top-level mime parts of a message.

	When decrypting mime parts, for example, we need all headers of the
	decrypted mime part to be included in the GMimeObject returned,
	otherwise we end up losing data.

2016-03-03  Jeffrey Stedfast  <fejj@gnome.org>
